Revision history for {{$dist->name}}

{{$NEXT}}

1.04      2019-08-13 13:58:33 -0400
  - [FFI::Build] will prune ffi/_build files which you
    probably do not want bundled with your FFI dist.

1.03      2019-02-12 16:06:51 -0500
  - [FFI::Build] sets configure_requires properly for 
    FFI::Build::MM

1.02      2018-11-18 11:37:05 -0500
  - Merged Dist-Zilla-Plugin-FFI-CheckLib into this dist.
    (see Changes.Dist-Zilla-Plugin-FFI-CheckLib for changes
    for that module)

0.01      2018-08-09 05:34:49 -0400
  - initial version