@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - curl https://raw.githubusercontent.com/plicease/cip/master/bin/travis-bootstrap | bash
+  - curl https://raw.githubusercontent.com/plicease/cip/main/bin/travis-bootstrap | bash
   - cip before-install
 
 install:
@@ -26,6 +26,10 @@ jobs:
     - env: CIP_TAG=5.18
     - env: CIP_TAG=5.16
     - env: CIP_TAG=5.14
+
+branches:
+  only:
+    - main
 
 cache:
   directories:
