@@ -12,7 +12,7 @@ release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 version_plugin = PkgVersion::Block
-github_user    = Perl5-FFI
+github_user    = PerlFFI
 irc            = irc://irc.perl.org/#native
 
 [RemovePrereqs]
