@@ -95,3 +95,4 @@ if($post_diag)
 spacer;
 
 done_testing;
+
